`auto_push` is now an enum mode, default-branch behavior is explicit, and `bb fix` UI cycles modes.
**What changed**
- Added enum type and parsing:
  - `/Volumes/Projects/Software/bb-project/internal/domain/types.go:23`
  - `/Volumes/Projects/Software/bb-project/internal/domain/auto_push_mode.go:1`
- Repo metadata now stores `auto_push` as mode (`false|true|include-default-branch`) instead of bool:
  - `/Volumes/Projects/Software/bb-project/internal/domain/types.go:103`
- Sync/init policy now uses branch-aware mode evaluation:
  - `/Volumes/Projects/Software/bb-project/internal/app/app.go:1028`
  - `/Volumes/Projects/Software/bb-project/internal/app/app.go:293`
- `repo policy` now accepts enum mode:
  - `/Volumes/Projects/Software/bb-project/internal/cli/cli.go:420`
  - `/Volumes/Projects/Software/bb-project/internal/app/app.go:1365`
- `bb fix` UI setting key now cycles modes (`false -> true -> include-default-branch -> false`) and persists via `RunRepoPolicy`:
  - `/Volumes/Projects/Software/bb-project/internal/app/fix_tui.go:1873`
  - `/Volumes/Projects/Software/bb-project/internal/app/fix_tui.go:1895`
- `enable-auto-push` fix action now sets the right mode for the current branch (uses `include-default-branch` on default branch):
  - `/Volumes/Projects/Software/bb-project/internal/app/fix.go:937`

**Behavior now**
- `false`: no auto-push.
- `true`: auto-push only on non-default branches.
- `include-default-branch`: auto-push on all branches.
- This removes the old default-branch catalog visibility gate from sync decision logic.

**Tests and docs updated**
- Added/updated unit + e2e tests for enum parsing, policy behavior, `bb fix` mode cycling, persistence, and sync outcomes:
  - `/Volumes/Projects/Software/bb-project/internal/domain/auto_push_mode_test.go:1`
  - `/Volumes/Projects/Software/bb-project/internal/app/push_policy_test.go:9`
  - `/Volumes/Projects/Software/bb-project/internal/app/fix_tui_test.go:729`
  - `/Volumes/Projects/Software/bb-project/internal/

--- a/docs/man/man1/bb-repo-policy.1
+++ b/docs/man/man1/bb-repo-policy.1
@@ -15,7 +15,7 @@ Set repository auto-push policy.
 
 .SH OPTIONS
 \fB--auto-push\fP=""
-	Set auto-push policy (true|false).
+	Set auto-push mode (false|true|include-default-branch).
 
 .PP
 \fB-h\fP, \fB--help\fP[=false]
