--- a/docs/man/man1/bb-repo.1
+++ b/docs/man/man1/bb-repo.1
@@ -24,4 +24,4 @@ Manage repository metadata and policy settings.
 
 
 .SH SEE ALSO
-\fBbb(1)\fP, \fBbb-repo-policy(1)\fP
+\fBbb(1)\fP, \fBbb-repo-access-refresh(1)\fP, \fBbb-repo-access-set(1)\fP, \fBbb-repo-policy(1)\fP, \fBbb-repo-remote(1)\fP
