--- a/docs/man/man1/bb-sync.1
+++ b/docs/man/man1/bb-sync.1
@@ -30,6 +30,10 @@ Run observe, publish, and reconcile flow.
 	Emit notifications for unsyncable repositories.
 
 .PP
+\fB--notify-backend\fP=""
+	Notification backend override (stdout|osascript).
+
+.PP
 \fB--push\fP[=false]
 	Allow pushing ahead commits when policy blocks by default.
 
