--- a/docs/man/man1/bb.1
+++ b/docs/man/man1/bb.1
@@ -23,4 +23,4 @@ bb is a local-first CLI for repository bootstrap and safe cross-machine converge
 
 
 .SH SEE ALSO
-\fBbb-catalog(1)\fP, \fBbb-completion(1)\fP, \fBbb-config(1)\fP, \fBbb-doctor(1)\fP, \fBbb-ensure(1)\fP, \fBbb-init(1)\fP, \fBbb-repo(1)\fP, \fBbb-scan(1)\fP, \fBbb-status(1)\fP, \fBbb-sync(1)\fP
+\fBbb-catalog(1)\fP, \fBbb-completion(1)\fP, \fBbb-config(1)\fP, \fBbb-doctor(1)\fP, \fBbb-ensure(1)\fP, \fBbb-fix(1)\fP, \fBbb-init(1)\fP, \fBbb-repo(1)\fP, \fBbb-scan(1)\fP, \fBbb-scheduler(1)\fP, \fBbb-status(1)\fP, \fBbb-sync(1)\fP
