feat(cli): add `bb clone`/`bb link` with explicit clone presets, GitHub HTTP repo links, and immediate state registration
Implemented and tested end-to-end:

- Updated plan/spec in `/Volumes/Projects/Software/bb-project/docs/010-CLONE.md`:
  - Added GitHub HTTP/HTTPS repo links as valid `<repo>` input.
  - Replaced implicit name-based preset behavior with explicit catalog→preset mapping config.

- Added new commands:
  - `/Volumes/Projects/Software/bb-project/internal/cli/cli.go`
    - `bb clone <repo> ...`
    - `bb link <project-or-repo> ...`
  - Includes flag forwarding + mutual exclusion validation (`--shallow`/`--no-shallow`, `--filter`/`--no-filter`).

- Implemented clone/link behavior:
  - `/Volumes/Projects/Software/bb-project/internal/app/clone.go`
    - Parses `org/repo`, GitHub HTTP links, HTTPS/SSH origins.
    - Resolves clone catalog from `--catalog` or `clone.default_catalog`.
    - Applies clone transport options via explicit `clone.catalog_preset` mapping.
    - Supports sparse paths (`--only`), shallow/filter, and immediate machine state update.
    - No-op detection for already-existing local origin with location notice.
  - `/Volumes/Projects/Software/bb-project/internal/app/link.go`
    - Anchors at repo root when inside a git repo, else cwd.
    - Resolves local selectors first; auto-clones remote selector if missing.
    - Creates relative/absolute symlink based on config/flag; idempotent symlink handling.

- Added config schema/defaults:
  - `/Volumes/Projects/Software/bb-project/internal/domain/types.go`
  - `/Volumes/Projects/Software/bb-project/internal/state/store.go`
  - `/Volumes/Projects/Software/bb-project/internal/app/config.go`
  - New keys: `clone.default_catalog`, `clone.shallow`, `clone.filter`, `clone.presets`, `clone.catalog_preset`, `link.target_dir`, `link.absolute`.

- Added git clone option support:
  - `/Volumes/Projects/Software/bb-project/internal/gitx/git.go`
  - New `CloneWithOptions(...)` with shallow/filter/sparse ch

--- a/docs/man/man1/bb-fix.1
+++ b/docs/man/man1/bb-fix.1
@@ -23,11 +23,19 @@ Inspect repositories and apply context-aware fixes.
 
 .PP
 \fB--message\fP=""
-	Commit message for stage-commit-push action (or 'auto').
+	Commit message for stage-commit-push/publish-new-branch/checkpoint-then-sync actions (or 'auto').
 
 .PP
 \fB--no-refresh\fP[=false]
 	Use current machine snapshot without running a refresh scan first.
+
+.PP
+\fB--publish-branch\fP=""
+	Target branch name for publish-new-branch or optional publish-to-new-branch flows.
+
+.PP
+\fB--return-to-original-sync\fP[=false]
+	After publish-new-branch, switch back to the original branch and run pull --ff-only.
 
 .PP
 \fB--sync-strategy\fP="rebase"
