feat(lumen): add optional Lumen integration to `bb fix` + new `bb diff`/`bb operate` passthrough commands
## Motivation
Implement the agreed Lumen integration end-to-end, including symbolic wizard controls, CLI support, and guardrails/tips when Lumen is unavailable.

## What changed
- Added optional Lumen config keys with defaults:
  - `integrations.lumen.enabled: true`
  - `integrations.lumen.show_install_tip: true`
  - Files:
    - `/Volumes/Projects/Software/bb-project/internal/domain/types.go`
    - `/Volumes/Projects/Software/bb-project/internal/state/store.go`
- Added Lumen runtime helper module:
  - availability/config checks
  - install/config tip handling
  - `lumen draft` commit message generation with git index snapshot/restore
  - `lumen diff`/`lumen operate` execution helpers
  - Files:
    - `/Volumes/Projects/Software/bb-project/internal/app/lumen.go`
    - `/Volumes/Projects/Software/bb-project/internal/app/lumen_test.go`
- Added CLI integration:
  - `bb fix --ai-message` (mutually exclusive with `--message`)
  - new top-level commands:
    - `bb diff <project> ...args`
    - `bb operate <project> ...args`
  - Files:
    - `/Volumes/Projects/Software/bb-project/internal/cli/cli.go`
    - `/Volumes/Projects/Software/bb-project/internal/cli/cli_test.go`
- Added app entrypoints for new commands:
  - `RunDiff`, `RunOperate`
  - file: `/Volumes/Projects/Software/bb-project/internal/app/app.go`
- Added non-interactive fix AI commit generation:
  - `--ai-message` works for commit-producing actions
  - strict validation/fail-fast behavior
  - file: `/Volumes/Projects/Software/bb-project/internal/app/fix.go`
- Updated `bb fix` wizard UX:
  - symbolic commit-generation button `✨` in commit field
  - immediate generation with spinner, then replace commit text for review/edit
  - symbolic visual diff button `◫` in changed-files block
  - visual diff launch uses `tea.ExecProcess`, returning to the same wizard state after exit
  - Files:
    - `/Volumes/Projects/S

--- a/docs/man/man1/bb-fix.1
+++ b/docs/man/man1/bb-fix.1
@@ -14,6 +14,10 @@ Inspect repositories and apply context-aware fixes.
 
 
 .SH OPTIONS
+\fB--ai-message\fP[=false]
+	Generate commit message with Lumen for commit-producing fix actions.
+
+.PP
 \fB-h\fP, \fB--help\fP[=false]
 	help for fix
 
