--- a/docs/man/man1/bb-init.1
+++ b/docs/man/man1/bb-init.1
@@ -12,6 +12,13 @@ bb-init - Initialize or adopt a repository and register metadata.
 .SH DESCRIPTION
 Initialize or adopt a repository and register metadata.
 
+.PP
+Target resolution:
+- With [project], bb creates or adopts at selected-catalog-root/project.
+- The selected catalog is --catalog when provided, otherwise the machine default catalog.
+- Without [project], bb infers the project from the current directory only when the current directory is inside the selected catalog and matches its repo layout depth.
+- init does not run a post-init scan; run bb scan or bb sync when you want to refresh machine observations.
+
 
 .SH OPTIONS
 \fB--catalog\fP=""
