feat(release): add configurable dev symlink install plus automated release-please + GoReleaser/Homebrew distribution
## Motivation
You wanted:
1. Developer install that can symlink `bb` into an existing PATH directory (for example `~/bin`).
2. GitHub release automation with versioning + binary artifacts + Homebrew install path.

## What I changed

- Added a new CLI `version` command with build metadata output in `/Volumes/Projects/Software/bb-project/internal/cli/cli.go`.
- Added TDD coverage for `version` behavior (default/fallback and ldflags override) in `/Volumes/Projects/Software/bb-project/internal/cli/cli_test.go`.
- Added dev install recipes in `/Volumes/Projects/Software/bb-project/justfile`:
1. `build-dev`
2. `install-dev link_dir=".bin"` (positional use: `just install-dev ~/bin`)
3. `uninstall-dev link_dir=".bin"`

- Added release automation:
1. `/Volumes/Projects/Software/bb-project/.github/workflows/ci.yml`
2. `/Volumes/Projects/Software/bb-project/.github/workflows/release-please.yml`
3. `/Volumes/Projects/Software/bb-project/.github/workflows/release.yml`
4. `/Volumes/Projects/Software/bb-project/release-please-config.json`
5. `/Volumes/Projects/Software/bb-project/.release-please-manifest.json`
6. `/Volumes/Projects/Software/bb-project/.goreleaser.yaml`

- GoReleaser builds darwin/linux amd64+arm64 and injects:
1. `bb-project/internal/cli.buildVersion`
2. `bb-project/internal/cli.buildCommit`
3. `bb-project/internal/cli.buildDate`

- Added Homebrew formula publishing to `<org>/homebrew-tap` via GoReleaser (using `HOMEBREW_TAP_GITHUB_TOKEN`).
- Updated docs:
1. `/Volumes/Projects/Software/bb-project/README.md` (developer install, version command, release flow, brew install)
2. Regenerated CLI docs/manpages including new `version` command:
   - `/Volumes/Projects/Software/bb-project/docs/cli/bb_version.md`
   - `/Volumes/Projects/Software/bb-project/docs/man/man1/bb-version.1`
   - plus refreshed root docs/man files.

- Ignored local dev artifacts in `

--- a/docs/man/man1/bb-fix.1
+++ b/docs/man/man1/bb-fix.1
@@ -27,7 +27,7 @@ Inspect repositories and apply context-aware fixes.
 
 .PP
 \fB--message\fP=""
-	Commit message for stage-commit-push/publish-new-branch/checkpoint-then-sync actions (or 'auto').
+	Commit message for stage-commit-push/publish-new-branch/checkpoint-then-sync actions (or 'auto' for configured empty-message behavior).
 
 .PP
 \fB--no-refresh\fP[=false]
