feat(fix-tui): compact `bb fix` list chrome, reclaim table space, and add `not cloned` tier
## Motivation
Applied your UI/UX optimization request to reduce vertical waste, simplify the main list screen, and make `clone_required` repos visually distinct and sortable as `not cloned`.

## What changed
- Reworked list-mode panel chrome in `/Volumes/Projects/Software/bb-project/internal/app/fix_tui.go`:
  - Removed the extra top header rows.
  - Moved merged title/subtitle into the panel top border (`bb  fix · Interactive remediation for unsyncable repositories`).
  - Kept busy spinner in that border title during revalidate/apply.
- Removed unnecessary body copy lines from the main panel:
  - Dropped the long `enter/ctrl+a` sentence.
  - Dropped the grouping sentence.
- Tightened vertical spacing:
  - Removed extra blank lines around stats, between sections, and before list details.
  - Removed dynamic spacer rows before footer so help panel stays compact.
- Condensed selected-repo metadata in `/Volumes/Projects/Software/bb-project/internal/app/fix_tui.go`:
  - `State`, `Auto-push`, `Branch`, `Reasons`, `Selected fixes` now render on one dot-separated line.
  - Renamed `Action help:` to `Action:`.
- Expanded horizontal usage:
  - `viewContentWidth()` now uses full page inner width.
  - Repo list width now uses full main panel inner width.
  - Header/row width math is aligned (`fixListContentWidth`).
- Added new tier/state for clone-required repos:
  - New tier: `fixRepoTierNotCloned`.
  - New visible state label: `not cloned`.
  - Sorting now: `fixable`, `unsyncable`, `not cloned`, `syncable`, `ignored`.
  - Summary pills include `NOT CLONED`.
- Added/updated tests in `/Volumes/Projects/Software/bb-project/internal/app/fix_tui_test.go` for:
  - Compact border title behavior and removed copy.
  - Spinner presence in border title while busy.
  - Dot-separated compact details line and `Action:` label.
  - Full panel-width list sizing.
  - New `not cloned` tier classificatio

--- a/docs/man/man1/bb-fix.1
+++ b/docs/man/man1/bb-fix.1
@@ -51,5 +51,15 @@ Inspect repositories and apply context-aware fixes.
 	Suppress verbose bb logs.
 
 
+.SH INTERACTIVE MODE NOTES
+\fBbb fix\fP list mode renders a compact bordered title (\fBbb fix · Interactive remediation for unsyncable repositories\fP) and a compact selected-repo details line to reduce vertical space usage.
+
+.PP
+List ordering is by catalog (default first), then state tier: \fBfixable\fP, \fBunsyncable\fP, \fBnot cloned\fP, \fBsyncable\fP, \fBignored\fP.
+
+.PP
+Repositories marked with \fBclone_required\fP are shown as \fBnot cloned\fP.
+
+
 .SH SEE ALSO
 \fBbb(1)\fP
