--- a/docs/man/man1/bb-fix.1
+++ b/docs/man/man1/bb-fix.1
@@ -58,6 +58,9 @@ Inspect repositories and apply context-aware fixes.
 Selected-repo metadata wraps on segment separators (\fB · \fP) so labels stay attached to values.
 
 .PP
+In list mode, \fBenter\fP runs selected fixes; when none are selected, it runs the currently browsed fix for the selected repo.
+
+.PP
 List ordering is by catalog (default first), then state tier: \fBfixable\fP, \fBunsyncable\fP, \fBnot cloned\fP, \fBsyncable\fP, \fBignored\fP.
 
 .PP
