fix(fix-tui): keep titled top border color in sync during `r` revalidation
## Motivation
`bb fix` list-mode busy border color changed on `r`, but the titled top edge stayed on the default border color.

## Root cause
`renderPanelWithTopTitle` in `/Volumes/Projects/Software/bb-project/internal/app/fix_tui.go` used a hardcoded top-border style (`borderColor`) instead of the active panel border style (`accentColor` during busy states).

## What changed
- Updated `/Volumes/Projects/Software/bb-project/internal/app/fix_tui.go`:
1. Replaced hardcoded top-border rendering with `panelTopBorderStyle(panel)`.
2. Added `panelTopBorderStyle` to derive top border foreground/background from the passed panel style.
3. Removed unused static `fixTopBorderStyle`.
- Added/updated tests in `/Volumes/Projects/Software/bb-project/internal/app/fix_tui_test.go`:
1. New `TestRenderPanelWithTopTitleUsesPanelTopBorderColor` (forced truecolor) to catch this regression.
2. Strengthened `TestFixTUIRevalidateShortcutEntersBusyState` to assert busy top-corner styling.
- Updated docs:
1. `/Volumes/Projects/Software/bb-project/README.md`
2. `/Volumes/Projects/Software/bb-project/docs/cli/bb_fix.md`
3. `/Volumes/Projects/Software/bb-project/docs/man/man1/bb-fix.1`

## Validation performed
- `go test ./internal/app -run "TestRenderPanelWithTopTitleUsesPanelTopBorderColor|TestFixTUIRevalidateShortcutEntersBusyState|TestFixTUIImmediateApplyEntersBusyStateWithSpinnerAndLockedStatus" -count=1`
- `go test ./internal/app -count=1`

--- a/docs/man/man1/bb-fix.1
+++ b/docs/man/man1/bb-fix.1
@@ -55,6 +55,9 @@ Inspect repositories and apply context-aware fixes.
 \fBbb fix\fP list mode renders a compact bordered title (\fBbb fix · Interactive remediation for unsyncable repositories\fP) and a compact selected-repo details line to reduce vertical space usage.
 
 .PP
+Busy list-mode states recolor the full primary border consistently, including the titled top edge.
+
+.PP
 Selected-repo metadata wraps on segment separators (\fB · \fP) so labels stay attached to values.
 
 .PP
