--- a/docs/man/man1/bb-fix.1
+++ b/docs/man/man1/bb-fix.1
@@ -64,6 +64,9 @@ Selected-repo metadata wraps on segment separators (\fB · \fP) so labels stay a
 In list mode, \fBenter\fP runs selected fixes; when none are selected, it runs the currently browsed fix for the selected repo.
 
 .PP
+In list mode, \fBi\fP toggles session ignore for the selected repo (ignore/unignore).
+
+.PP
 List ordering is by catalog (default first), then state tier: \fBfixable\fP, \fBunsyncable\fP, \fBnot cloned\fP, \fBsyncable\fP, \fBignored\fP.
 
 .PP
