feat(github): detect and guide `gh` install/auth prerequisites across onboarding, doctor, and GitHub operations
## Motivation
You asked to make it explicit and actionable that `gh` must be installed and authenticated for GitHub-backed workflows, in README, onboarding (`bb config`), and `bb doctor`, with runtime detection and guidance.

## What changed
- Added shared GitHub CLI preflight detection and messaging in `/Volumes/Projects/Software/bb-project/internal/app/github_cli.go`.
- `bb doctor` now checks GitHub prerequisites when relevant (configured GitHub owner or GitHub remotes in selected repos) and prints warnings with remediation commands in `/Volumes/Projects/Software/bb-project/internal/app/app.go`.
- GitHub operations now fail early with clear guidance if `gh` is missing or unauthenticated before running `gh` commands:
  - `/Volumes/Projects/Software/bb-project/internal/app/app.go` (`createRemoteRepo`, `ensureForkRemoteRepo`)
- Passed GitHub CLI status into config wizard input in `/Volumes/Projects/Software/bb-project/internal/app/config.go`.
- Updated config wizard UI to surface prerequisite state in onboarding and GitHub step in `/Volumes/Projects/Software/bb-project/internal/app/config_wizard.go`.
- Added/updated tests (red first, then implementation):
  - `/Volumes/Projects/Software/bb-project/internal/app/doctor_github_prereq_test.go`
  - `/Volumes/Projects/Software/bb-project/internal/app/config_wizard_test.go`
  - `/Volumes/Projects/Software/bb-project/internal/app/init_test.go`
  - `/Volumes/Projects/Software/bb-project/internal/app/config_test.go`
- Updated docs:
  - `/Volumes/Projects/Software/bb-project/README.md`
  - `/Volumes/Projects/Software/bb-project/internal/cli/cli.go` (command long help for `config`/`doctor`)
  - regenerated docs:
    - `/Volumes/Projects/Software/bb-project/docs/cli/bb_config.md`
    - `/Volumes/Projects/Software/bb-project/docs/cli/bb_doctor.md`
    - `/Volumes/Projects/Software/bb-project/docs/man/man1/bb-config.1`
  

--- a/docs/man/man1/bb-config.1
+++ b/docs/man/man1/bb-config.1
@@ -12,6 +12,11 @@ bb-config - Launch interactive configuration wizard.
 .SH DESCRIPTION
 Launch interactive configuration wizard.
 
+.PP
+The onboarding flow includes a GitHub CLI prerequisite check. It reports whether gh
+is installed and authenticated, and shows remediation guidance when required for
+GitHub operations.
+
 
 .SH OPTIONS
 \fB-h\fP, \fB--help\fP[=false]
