--- a/docs/man/man1/bb-doctor.1
+++ b/docs/man/man1/bb-doctor.1
@@ -12,6 +12,11 @@ bb-doctor - Report unsyncable repositories and reasons.
 .SH DESCRIPTION
 Report unsyncable repositories and reasons.
 
+.PP
+When GitHub integration is configured (or selected repositories use GitHub remotes),
+doctor also checks GitHub CLI prerequisites and emits warnings when gh is missing
+or unauthenticated, including remediation guidance.
+
 
 .SH OPTIONS
 \fB-h\fP, \fB--help\fP[=false]
